--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
-  "keywords": ["ai", "memory", "sekha", "typescript"],
+  "keywords": [
+    "ai",
+    "memory",
+    "sekha",
+    "typescript"
+  ],
   "license": "AGPL-3.0",
   "repository": {
     "type": "git",
@@ -28,9 +33,9 @@
   "bugs": {
     "url": "https://github.com/sekha-ai/sekha-js-sdk/issues"
   },
-  "homepage": "https://github.com/sekha-ai/sekha-js-sdk#readme"
+  "homepage": "https://github.com/sekha-ai/sekha-js-sdk#readme",
   "devDependencies": {
-    "@types/jest": "^29.5.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.0.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
