--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,27 @@ jobs:
       - name: Run tests
         run: npm test -- --coverage --ci --maxWorkers=2
 
+      - name: Check coverage threshold
+        if: matrix.os == 'ubuntu-latest' && matrix.node-version == '20.x'
+        run: |
+          node -e "
+          const coverage = require('./coverage/coverage-summary.json');
+          const total = coverage.total;
+          const threshold = 90;
+          
+          console.log('Coverage Summary:');
+          console.log('  Lines:', total.lines.pct + '%');
+          console.log('  Statements:', total.statements.pct + '%');
+          console.log('  Functions:', total.functions.pct + '%');
+          console.log('  Branches:', total.branches.pct + '%');
+          
+          if (total.lines.pct < threshold) {
+            console.error('❌ Coverage below ' + threshold + '% threshold');
+            process.exit(1);
+          }
+          console.log('✅ Coverage meets ' + threshold + '% threshold');
+          "
+
       - name: Build package
         run: npm run build
 
@@ -189,10 +210,128 @@ jobs:
             exit 1
           fi
 
+  integration-test:
+    name: Integration Test with Controller
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    
+    services:
+      redis:
+        image: redis:7-alpine
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd="redis-cli ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+      
+      chroma:
+        image: chromadb/chroma:latest
+        ports:
+          - 8000:8000
+        options: >-
+          --health-cmd="curl -f http://localhost:8000/api/v1/heartbeat"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
+    steps:
+      - name: Checkout sekha-js-sdk
+        uses: actions/checkout@v4
+        with:
+          repository: sekha-ai/sekha-js-sdk
+          path: js-sdk
+
+      - name: Checkout sekha-controller
+        uses: actions/checkout@v4
+        with:
+          repository: sekha-ai/sekha-controller
+          path: controller
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Build controller
+        working-directory: controller
+        run: cargo build --release
+
+      - name: Start controller
+        working-directory: controller
+        env:
+          SEKHA_PORT: 8080
+          CHROMA_HOST: http://localhost:8000
+          REDIS_HOST: redis://localhost:6379/0
+          SEKHA_API_KEY: test-token-123
+        run: |
+          ./target/release/sekha-controller &
+          CONTROLLER_PID=$!
+          echo "CONTROLLER_PID=$CONTROLLER_PID" >> $GITHUB_ENV
+          sleep 5
+          curl -f http://localhost:8080/health || exit 1
+
+      - name: Install SDK dependencies
+        working-directory: js-sdk
+        run: npm ci
+
+      - name: Build SDK
+        working-directory: js-sdk
+        run: npm run build
+
+      - name: Run integration tests
+        working-directory: js-sdk
+        env:
+          SEKHA_BASE_URL: http://localhost:8080
+          SEKHA_API_KEY: test-token-123
+        run: |
+          if [ -d "tests/integration" ]; then
+            npm run test:integration
+          else
+            echo "⚠️  No integration tests found, creating smoke test..."
+            mkdir -p tests/integration
+            cat > tests/integration/smoke.test.ts << 'EOF'
+          import { SekhaClient } from '../../src';
+
+          describe('Integration Tests', () => {
+            const client = new SekhaClient({
+              baseUrl: process.env.SEKHA_BASE_URL || 'http://localhost:8080',
+              apiKey: process.env.SEKHA_API_KEY || 'test-token-123'
+            });
+
+            it('should connect to controller', async () => {
+              const health = await client.health();
+              expect(health.status).toBe('healthy');
+            });
+
+            it('should create conversation', async () => {
+              const conv = await client.conversations.create({
+                label: 'Integration Test',
+                messages: [{ role: 'user', content: 'Test message' }]
+              });
+              expect(conv.id).toBeDefined();
+            });
+          });
+          EOF
+            npm test -- tests/integration/
+          fi
+
+      - name: Cleanup
+        if: always()
+        run: |
+          if [ ! -z "$CONTROLLER_PID" ]; then
+            kill $CONTROLLER_PID || true
+          fi
+
+
   status-check:
     name: All Tests Passed
     runs-on: ubuntu-latest
-    needs: [test, lint, security, publish-check, compatibility]
+    needs: [test, lint, security, publish-check, compatibility, integration-test]
     if: always()
     
     steps:
@@ -204,6 +343,10 @@ jobs:
           fi
           if [ "${{ needs.lint.result }}" != "success" ]; then
             echo "❌ Linting failed"
+            exit 1
+          fi
+          if [ "${{ needs.integration-test.result }}" == "failure" ]; then
+            echo "❌ Integration tests failed"
             exit 1
           fi
           echo "✅ All checks passed!"
