fix: Add ESLint dependencies and proper lint script
Add @typescript-eslint packages and update lint script
to use ESLint properly

--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
     "test:integration": "vitest run tests/integration",
-    "lint": "echo 'Linting skipped - add ESLint config if needed' && exit 0",
+    "lint": "eslint 'src/**/*.{ts,tsx}' 'tests/**/*.{ts,tsx}' --max-warnings 0",
+    "lint:fix": "eslint 'src/**/*.{ts,tsx}' 'tests/**/*.{ts,tsx}' --fix",
     "typecheck": "tsc --noEmit",
-    "format": "echo 'Formatting skipped - add Prettier if needed' && exit 0",
-    "format:check": "echo 'Format check skipped - add Prettier if needed' && exit 0",
-    "docs": "echo 'Docs generation skipped - add TypeDoc if needed' && exit 0",
+    "format": "prettier --write 'src/**/*.{ts,tsx,json}' 'tests/**/*.{ts,tsx}'",
+    "format:check": "prettier --check 'src/**/*.{ts,tsx,json}' 'tests/**/*.{ts,tsx}'",
+    "docs": "typedoc --entryPoints src/index.ts --out docs",
     "prepublishOnly": "npm run build && npm test"
   },
   "keywords": [
@@ -44,9 +45,14 @@
   "homepage": "https://github.com/sekha-ai/sekha-js-sdk#readme",
   "devDependencies": {
     "@types/node": "^25.0.10",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
     "@vitest/coverage-v8": "^4.0.18",
     "@vitest/ui": "^4.0.16",
+    "eslint": "^9.18.0",
     "happy-dom": "^20.3.9",
+    "prettier": "^3.4.2",
+    "typedoc": "^0.27.5",
     "typescript": "^5.9.0",
     "vitest": "^4.0.18"
   }
