--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "eslint": "^9.18.0",
     "happy-dom": "^20.3.9",
     "prettier": "^3.4.2",
-    "typedoc": "^0.27.5",
-    "typescript": "^5.9.0",
+    "typedoc": "^0.27.9",
+    "typescript": "~5.8.0",
     "vitest": "^4.0.18"
   }
 }
