fix: Remove unsupported --ci flag from vitest command
Vitest 4.x doesn't support --ci flag. Use --run (default) instead.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
         run: npx tsc --noEmit
 
       - name: Run tests
-        run: npm test -- --coverage --ci --maxWorkers=2
+        run: npm test -- --coverage --maxWorkers=2
 
       - name: Check coverage threshold
         if: matrix.os == 'ubuntu-latest' && matrix.node-version == '20.x'
