--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,8 @@ jobs:
       - name: Build package
         run: npm run build
 
-      - name: Check bundle size
+      - name: Check bundle size (Linux only)
+        if: matrix.os == 'ubuntu-latest' && matrix.node-version == '20.x'
         run: |
           echo "📦 Bundle sizes:"
           du -sh dist/
