--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,6 +120,9 @@ jobs:
         with:
           node-version: '20.x'
 
+      - name: Generate package-lock.json
+        run: npm i --package-lock-only
+
       - name: Install dependencies
         run: npm install
 
