--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -227,8 +227,9 @@ jobs:
           fi
 
   integration-test:
-    name: Integration Test with Controller
+    name: Integration Tests - Contract Validation
     runs-on: ubuntu-latest
+    needs: test
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
     services:
@@ -241,25 +242,15 @@ jobs:
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
-      
-      chroma:
-        image: chromadb/chroma:latest
-        ports:
-          - 8000:8000
-        options: >-
-          --health-cmd="curl -f http://localhost:8000/api/v1/heartbeat"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
 
     steps:
-      - name: Checkout sekha-js-sdk
+      - name: Checkout SDK
         uses: actions/checkout@v6
         with:
           repository: sekha-ai/sekha-js-sdk
-          path: js-sdk
+          path: sdk
 
-      - name: Checkout sekha-controller
+      - name: Checkout controller
         uses: actions/checkout@v6
         with:
           repository: sekha-ai/sekha-controller
@@ -270,45 +261,128 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: Setup Rust
+      - name: Set up Rust
         uses: dtolnay/rust-toolchain@stable
+
+      - name: Start ChromaDB
+        run: |
+          echo "🚀 Starting ChromaDB..."
+          docker run -d \
+            --name chroma \
+            -p 8000:8000 \
+            chromadb/chroma:0.4.24
+          
+          echo "⏳ Waiting for ChromaDB..."
+          for i in {1..30}; do
+            if curl -sf http://localhost:8000/api/v1/heartbeat > /dev/null 2>&1; then
+              echo "✅ ChromaDB is ready (attempt $i/30)"
+              break
+            fi
+            if [ $i -eq 30 ]; then
+              echo "❌ ChromaDB timeout"
+              exit 1
+            fi
+            sleep 2
+          done
 
       - name: Build controller
         working-directory: controller
-        run: cargo build --release
+        run: |
+          cargo build --release --bin sekha-controller
+
+      - name: Create controller config
+        working-directory: controller
+        run: |
+          mkdir -p data
+          
+          cat > config.toml << 'EOF'
+          config_version = "v0.2.0"
+          
+          server_host = "0.0.0.0"
+          server_port = 8080
+          mcp_api_key = "sk-sekha-test-token-123456789012345678901234567890"
+          rest_api_key = "test-token-123"
+          database_url = "sqlite:///home/runner/work/sekha-js-sdk/sekha-js-sdk/controller/data/sekha.db?mode=rwc"
+          ollama_url = "http://localhost:11434"
+          chroma_url = "http://localhost:8000"
+          embedding_model = "nomic-embed-text:latest"
+          max_connections = 10
+          log_level = "info"
+          
+          [[llm_providers]]
+          id = "ollama_ci"
+          type = "ollama"
+          base_url = "http://localhost:11434"
+          timeout_secs = 120
+          priority = 1
+          
+          [[llm_providers.models]]
+          model_id = "nomic-embed-text:latest"
+          task = "embedding"
+          context_window = 512
+          dimension = 768
+          
+          [[llm_providers.models]]
+          model_id = "llama3.1:8b"
+          task = "chat_small"
+          context_window = 8192
+          
+          [[llm_providers.models]]
+          model_id = "llama3.1:8b"
+          task = "chat_smart"
+          context_window = 8192
+          
+          [default_models]
+          embedding = "nomic-embed-text:latest"
+          chat_fast = "llama3.1:8b"
+          chat_smart = "llama3.1:8b"
+          EOF
 
       - name: Start controller
         working-directory: controller
         env:
-          SEKHA_PORT: 8080
-          CHROMA_HOST: http://localhost:8000
-          REDIS_HOST: redis://localhost:6379/0
-          SEKHA_API_KEY: test-token-123
+          RUST_LOG: info
         run: |
-          ./target/release/sekha-controller &
+          echo "🚀 Starting controller..."
+          ./target/release/sekha-controller > ${{ runner.temp }}/controller.log 2>&1 &
           CONTROLLER_PID=$!
           echo "CONTROLLER_PID=$CONTROLLER_PID" >> $GITHUB_ENV
-          sleep 5
-          curl -f http://localhost:8080/health || exit 1
+          
+          echo "⏳ Waiting for controller..."
+          for i in {1..60}; do
+            if curl -sf http://localhost:8080/health > /dev/null 2>&1; then
+              echo "✅ Controller is healthy (attempt $i/60)"
+              break
+            fi
+            if [ $i -eq 60 ]; then
+              echo "❌ Controller timeout"
+              cat ${{ runner.temp }}/controller.log || true
+              exit 1
+            fi
+            sleep 1
+          done
 
       - name: Install SDK dependencies
-        working-directory: js-sdk
+        working-directory: sdk
         run: npm install
 
       - name: Build SDK
-        working-directory: js-sdk
+        working-directory: sdk
         run: npm run build
 
       - name: Run integration tests
-        working-directory: js-sdk
+        working-directory: sdk
         env:
           SEKHA_BASE_URL: http://localhost:8080
-          SEKHA_API_KEY: test-token-123
+          SEKHA_API_KEY: sk-sekha-test-token-123456789012345678901234567890
+          SEKHA_INTEGRATION_TESTS: "1"
         run: |
           if [ -d "tests/integration" ]; then
             npm run test:integration
           else
-            echo "⚠️  No integration tests found, skipping..."
+            echo "ℹ️  No integration tests directory found"
+            echo "Running basic endpoint validation..."
+            npm test -- --run
           fi
 
       - name: Cleanup
@@ -317,6 +391,8 @@ jobs:
           if [ ! -z "$CONTROLLER_PID" ]; then
             kill $CONTROLLER_PID || true
           fi
+          docker stop chroma || true
+          docker rm chroma || true
 
 
   status-check:
